# swagger.json
@@ -11,7 +11,7 @@
     "https"
   ],
   "paths": {
-    "/profile": {
+    "/checkLoginStatus": {
       "get": {
         "description": "",
         "responses": {
@@ -21,7 +21,7 @@
         }
       }
     },
-    "/checkLoginStatus": {
+    "/profile": {
       "get": {
         "description": "",
         "responses": {
@@ -34,7 +34,6 @@
     "/entry/getAll": {
       "get": {
         "description": "",
-        "tags": ["Journal"],
         "produces": [
           "application/json"
         ],
@@ -51,7 +50,6 @@
     "/entry/getSingle/{id}": {
       "get": {
         "description": "",
-        "tags": ["Journal"],
         "produces": [
           "application/json"
         ],
@@ -76,7 +74,6 @@
     "/entry/createSingle": {
       "post": {
         "description": "",
-        "tags": ["Journal"],
         "parameters": [
           {
             "name": "body",
@@ -119,7 +116,6 @@
     "/entry/updateSingle/{id}": {
       "put": {
         "description": "",
-        "tags": ["Journal"],
         "parameters": [
           {
             "name": "id",
@@ -171,7 +167,6 @@
     "/entry/deleteSingle/{id}": {
       "delete": {
         "description": "",
-        "tags": ["Journal"],
         "parameters": [
           {
             "name": "id",
@@ -196,7 +191,6 @@
     "/users/getAll/": {
       "get": {
         "description": "",
-        "tags": ["Users"],
         "produces": [
           "application/json"
         ],
@@ -213,7 +207,6 @@
     "/users/getSingle/{id}": {
       "get": {
         "description": "",
-        "tags": ["Users"],
         "produces": [
           "application/json"
         ],
@@ -238,7 +231,6 @@
     "/users/createSingle/": {
       "post": {
         "description": "",
-        "tags": ["Users"],
         "parameters": [
           {
             "name": "body",
@@ -272,7 +264,6 @@
     "/users/updateSingle/{id}": {
       "put": {
         "description": "",
-        "tags": ["Users"],
         "parameters": [
           {
             "name": "id",
@@ -315,7 +306,6 @@
     "/users/deleteSingle/{id}": {
       "delete": {
         "description": "",
-        "tags": ["Users"],
         "parameters": [
           {
             "name": "id",
@@ -340,7 +330,6 @@
     "/favorites/getAll": {
       "get": {
         "description": "",
-        "tags": ["Favorites"],
         "produces": [
           "application/json"
         ],
@@ -357,7 +346,6 @@
     "/favorites/createSingle": {
       "post": {
         "description": "",
-        "tags": ["Favorites"],
         "parameters": [
           {
             "name": "body",
@@ -400,7 +388,6 @@
     "/favorites/moveToFav/{id}": {
       "put": {
         "description": "",
-        "tags": ["Favorites"],
         "parameters": [
           {
             "name": "id",
@@ -425,7 +412,6 @@
     "/favorites/moveFromFav/{id}": {
       "put": {
         "description": "",
-        "tags": ["Favorites"],
         "parameters": [
           {
             "name": "id",
@@ -450,7 +436,6 @@
     "/favorites/deleteSingle/{id}": {
       "delete": {
         "description": "",
-        "tags": ["Favorites"],
         "parameters": [
           {
             "name": "id",
@@ -475,7 +460,6 @@
     "/comments/getAll": {
       "get": {
         "description": "",
-        "tags": ["Comments"],
         "produces": [
           "application/json"
         ],
@@ -492,7 +476,6 @@
     "/comments/createSingle": {
       "post": {
         "description": "",
-        "tags": ["Comments"],
         "parameters": [
           {
             "name": "body",
@@ -526,7 +509,6 @@
     "/comments/updateSingle/{id}": {
       "put": {
         "description": "",
-        "tags": ["Comments"],
         "parameters": [
           {
             "name": "id",
@@ -569,7 +551,6 @@
     "/comments/deleteSingle/{id}": {
       "delete": {
         "description": "",
-        "tags": ["Comments"],
         "parameters": [
           {
             "name": "id",
